# nimbusguard

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  docker-bake.hcl  docker-compose.yml  main.py  quick_test.sh  requirements.txt  test_api.py
.cursor/rules/: commit-conventions.mdc  nimbusguard-guide.mdc
NimbusGuard/: bruno.json  process.bru
docker/: base.Dockerfile  requirements.txt
docs/: controller-pattern-success.md  openai-setup.md  operator-architecture.md
helm/: values-alloy.yaml
make/: Makefile.components  Makefile.dev  Makefile.infrastructure  Makefile.monitoring  README.md
model_backups/: latest
model_backups/backup_20250715_203352/: backup.sh  minio_contents.txt
monitoring/: prometheus.yml
scripts/: README.md  advanced_evaluation.py  backup_models.py  collect_training_data.py  comparison_insights.md  deploy-kserve-only.sh  diagnose_data_types.py  evaluate.py  evaluate_dqn.py  export_prometheus.py  exporter.py  feature_engineering.py  feature_engineering_analysis.py  feature_selector.py  hpa_quick_check.sh  inspect_dataset.py  kfp_pipeline.py  monitor_hpa_scaling.sh  monitor_keda.py  prepare_dataset.py  requirements.txt  research_showcase.py  restore_models.py  run_pipeline.py  scaling_comparison.py  test-dependency-fix.sh  test_dataset_loading.py  test_dqn_training.py  test_keda_scaling.py  test_prometheus_connection.py  train_dqn.py  train_with_external_dataset.py  trigger_training.py  upload_dataset.py
scripts/advanced_evaluation/: comprehensive_summary.json  performance_table.tex
scripts/dqn_baseline/: alloy_build_info.csv  alloy_component_controller_evaluating.csv  alloy_component_controller_running_components.csv  alloy_component_dependencies_wait_seconds_bucket.csv  alloy_component_dependencies_wait_seconds_count.csv  alloy_component_dependencies_wait_seconds_sum.csv  alloy_component_evaluation_queue_size.csv  alloy_component_evaluation_seconds_bucket.csv  alloy_component_evaluation_seconds_count.csv  alloy_component_evaluation_seconds_sum.csv  alloy_config_hash.csv  alloy_config_last_load_success_timestamp_seconds.csv  alloy_config_last_load_successful.csv  alloy_config_load_failures_total.csv  alloy_labelstore_global_ids_count.csv  alloy_labelstore_last_stale_check_timestamp.csv  alloy_labelstore_remote_store_ids_count.csv  alloy_resources_machine_rx_bytes_total.csv  alloy_resources_machine_tx_bytes_total.csv  alloy_resources_process_cpu_seconds_total.csv  alloy_resources_process_resident_memory_bytes.csv  alloy_resources_process_start_time_seconds.csv  alloy_resources_process_virtual_memory_bytes.csv  deprecated_flags_inuse_total.csv  dqn_action_keep_same_created.csv  dqn_action_keep_same_total.csv  dqn_action_scale_down_created.csv  dqn_action_scale_down_total.csv  dqn_action_scale_up_created.csv  dqn_action_scale_up_total.csv  dqn_decision_confidence_avg.csv  dqn_decisions_created.csv  dqn_decisions_total.csv  dqn_epsilon_value.csv  dqn_experiences_added_created.csv  dqn_experiences_added_total.csv  dqn_exploitation_actions_created.csv  dqn_exploitation_actions_total.csv  dqn_exploration_actions_created.csv  dqn_exploration_actions_total.csv  (+829 more)
scripts/dqn_data/: dqn_feature_mapping.json  dqn_features.parquet  feature_scaler.pkl  metadata.json  research_summary.md  summary.md
scripts/evaluation_results/: evaluation_summary.json
scripts/feature_analysis/: feature_engineering_summary.json  feature_engineering_table.tex
scripts/hpa_baseline/: alloy_build_info.csv  alloy_component_controller_evaluating.csv  alloy_component_controller_running_components.csv  alloy_component_dependencies_wait_seconds_bucket.csv  alloy_component_dependencies_wait_seconds_count.csv  (+815 more)
src/dqn-adapter/: Dockerfile  README.md  config.py  diagnostic_tool.py  dqn_features.parquet  evaluator.py  externalscaler_pb2.py  grpc_scaler.py  lstm_forecaster.py  main.py  pyproject.toml  requirements.txt
src/dqn-adapter/ai/: __init__.py  graph.py  reasoning.py  rewards.py
src/dqn-adapter/config/: __init__.py  ai_config.py  dqn_config.py  infrastructure_config.py  main.py  reward_config.py
src/dqn-adapter/core/: __init__.py  controller.py  services.py
src/dqn-adapter/data/: __init__.py  buffer.py  prometheus.py
src/dqn-adapter/models/: __init__.py  models.py  network.py  trainer.py
src/dqn-adapter/monitoring/: __init__.py  evaluator.py  metrics.py
src/dqn-adapter/utils/: __init__.py  exceptions.py  logging_config.py
src/nimbusguard-operator/: Dockerfile  LANGGRAPH_MIGRATION.md  README.md  config.py  crd.py  handler.py  langgraph_handler.py  langgraph_state.py  langgraph_tools.py  langgraph_workflow.py  loki.py  main.py  main_langgraph.py  nimbusguard_operator.py  observability.py  prometheus.py  pyproject.toml  requirements.txt  rules.py  tempo.py  test_kubecrd.py
src/nimbusguard-operator/ml/: __init__.py  dqn_agent.py  dqn_model.py  kserve_dqn_agent.py  kubeflow_integration.py  reward_system.py  state_representation.py
src/nimbusguard-operator/nimbusguard/: __init__.py  config.py  controller.py  crd_manager.py  health.py  metrics.py  operator.py  utils.py
src/nimbusguard-operator/nimbusguard/clients/: __init__.py  prometheus.py
src/nimbusguard-operator/nimbusguard/engines/: __init__.py  decision.py
src/nimbusguard-operator/nimbusguard/models/: __init__.py  nimbusguard_hpa_crd.py
src/operator/: Dockerfile  README.md  cpu_forecaster.keras  cpu_forecaster_scaler.pkl  feature_scaler.pkl  forecaster.keras  forecaster_scaler.pkl  main.py  memory_forecaster.keras  memory_forecaster_scaler.pkl  pyproject.toml
src/operator/config/: __init__.py  settings.py
src/operator/dqn/: __init__.py  agent.py  context_manager.py  model.py  replay_buffer.py  rewards.py
src/operator/forecasting/: __init__.py  base.py  data_prep.py  lstm_predictor.py  model.py  predictor.py
src/operator/k8s/: client.py  scaler.py
src/operator/metrics/: __init__.py  collector.py
src/operator/prometheus/: __init__.py  client.py  queries.py
src/operator/storage/: minio_client.py
src/operator/workflow/: graph.py  nodes.py  state.py
(+2513 files in other folders)
