[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nimbusguard-operator"
version = "1.0.0"
description = "NimbusGuard Intelligent Scaling Operator - A Kubernetes operator for intelligent auto-scaling"
authors = [
    {name = "NimbusGuard Team"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "kopf>=1.37.0",
    "kubernetes>=23.3.0,<24.0.0",
    "kubernetes-asyncio>=23.3.0,<24.0.0",
    "kubecrd>=0.2.0",
    "aiohttp>=3.9.0",
    "langgraph>=0.0.60",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "openai>=1.3.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "opentelemetry-instrumentation-aiohttp-client>=0.42b0",
    "pydantic>=2.5.0",
    "apischema>=0.18.0",
    "pyyaml>=6.0.1",
    "python-dateutil>=2.8.2",
    "typing-extensions>=4.8.0",
    "requests>=2.31.0",
    "kr8s",
]

[project.scripts]
nimbusguard-operator = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nimbusguard*"]

[tool.setuptools.package-data]
nimbusguard = ["*.py"]
