[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nimbusguard-operator"
version = "0.1.0"
description = "NimbusGuard Kubernetes Operator with AI-driven scaling"
authors = [
    {name = "NimbusGuard Team"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Core operator framework
    "kopf>=1.37.0",
    
    # Kubernetes client
    "kubernetes>=27.2.0",
    
    # Machine Learning and Data Processing
    "tensorflow>=2.13.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    
    # Additional utilities
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    
    # Metrics and monitoring
    "prometheus_client>=0.18.0",
    
    # Object storage
    "minio>=7.1.0",
    
    # LLM validation with MCP tools
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.black]
line-length = 88
target-version = ['py39'] 